--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -504,5 +504,364 @@
   "diaryListTitle": "Diaries",
   "@diaryListTitle": {
     "description": "App bar title for the diary list screen"
+  },
+  "commonBack": "Back",
+  "@commonBack": {
+    "description": "Generic back button label"
+  },
+  "commonNext": "Next",
+  "@commonNext": {
+    "description": "Generic next button label"
+  },
+  "onboardingSkip": "Skip",
+  "@onboardingSkip": {
+    "description": "Skip button shown on onboarding pages"
+  },
+  "onboardingWelcomeTitle": "Welcome to\nSmart Photo Diary",
+  "@onboardingWelcomeTitle": {
+    "description": "Headline shown on the first onboarding page"
+  },
+  "onboardingWelcomeSubtitle": "Turn each day into a beautiful story. Simply pick your photos and let the diary come to life.",
+  "@onboardingWelcomeSubtitle": {
+    "description": "Subheading explaining the app concept"
+  },
+  "onboardingThreeStepsTitle": "Create your diary in three steps",
+  "@onboardingThreeStepsTitle": {
+    "description": "Title introducing the three-step process"
+  },
+  "onboardingStepTitle": "Step {step}",
+  "@onboardingStepTitle": {
+    "description": "Label for each onboarding step",
+    "placeholders": {
+      "step": {
+        "type": "int"
+      }
+    }
+  },
+  "onboardingStep1Description": "Pick the photos you took today",
+  "@onboardingStep1Description": {
+    "description": "Description for step 1 on the onboarding flow"
+  },
+  "onboardingStep2Description": "AI crafts a heartwarming diary from your photos",
+  "@onboardingStep2Description": {
+    "description": "Description for step 2 on the onboarding flow"
+  },
+  "onboardingStep3Description": "Save, edit, and reflect on your memories",
+  "@onboardingStep3Description": {
+    "description": "Description for step 3 on the onboarding flow"
+  },
+  "onboardingShareTitle": "Share your diary instantly",
+  "@onboardingShareTitle": {
+    "description": "Title for the sharing onboarding page"
+  },
+  "onboardingShareFormatTitle": "Choose your format",
+  "@onboardingShareFormatTitle": {
+    "description": "Title describing sharing format choices"
+  },
+  "onboardingShareFormatDescription": "Select vertical or square layouts",
+  "@onboardingShareFormatDescription": {
+    "description": "Description for selecting share formats"
+  },
+  "onboardingShareMultipleTitle": "Made for multiple photos",
+  "@onboardingShareMultipleTitle": {
+    "description": "Title for multi-photo support on onboarding"
+  },
+  "onboardingShareMultipleDescription": "Balanced layouts even with several images",
+  "@onboardingShareMultipleDescription": {
+    "description": "Description for multi-photo layouts"
+  },
+  "onboardingPlansTitle": "Choose the plan that fits",
+  "@onboardingPlansTitle": {
+    "description": "Title introducing subscription plans on onboarding"
+  },
+  "onboardingPlanBasicSubtitle": "Free plan",
+  "@onboardingPlanBasicSubtitle": {
+    "description": "Subtitle for the Basic plan card"
+  },
+  "onboardingPlanFeatureMonthlyLimit": "Generate up to {count} diaries per month",
+  "@onboardingPlanFeatureMonthlyLimit": {
+    "description": "Feature text describing the monthly AI generation limit",
+    "placeholders": {
+      "count": {
+        "type": "int"
+      }
+    }
+  },
+  "onboardingPlanFeatureRecentPhotos": "Select from photos taken today or yesterday",
+  "@onboardingPlanFeatureRecentPhotos": {
+    "description": "Feature text for recent photo access"
+  },
+  "onboardingPlanFeatureBasicPrompts": "Includes essential writing prompts",
+  "@onboardingPlanFeatureBasicPrompts": {
+    "description": "Feature text for basic prompt availability"
+  },
+  "onboardingPlanFeaturePastDays": "Pick from photos taken within the last {days} days",
+  "@onboardingPlanFeaturePastDays": {
+    "description": "Feature text for historical photo access",
+    "placeholders": {
+      "days": {
+        "type": "int"
+      }
+    }
+  },
+  "onboardingPlanFeatureRichPrompts": "Unlock an expanded prompt library",
+  "@onboardingPlanFeatureRichPrompts": {
+    "description": "Feature text for rich prompt availability"
+  },
+  "onboardingPlanStartFree": "Start for free",
+  "@onboardingPlanStartFree": {
+    "description": "Message indicating the app can be started for free"
+  },
+  "onboardingPermissionTitle": "Allow photo access",
+  "@onboardingPermissionTitle": {
+    "description": "Title for the permission onboarding page"
+  },
+  "onboardingPermissionDescription": "We need access to your photo library to craft your diary entries.",
+  "@onboardingPermissionDescription": {
+    "description": "Description explaining why photo access is required"
+  },
+  "onboardingPrivacyTitle": "Privacy first",
+  "@onboardingPrivacyTitle": {
+    "description": "Title highlighting privacy guidance"
+  },
+  "onboardingPrivacyDescription": "Your photos are used only when generating diaries and never stored on external servers.",
+  "@onboardingPrivacyDescription": {
+    "description": "Description assuring users about privacy"
+  },
+  "onboardingProcessing": "Preparing...",
+  "@onboardingProcessing": {
+    "description": "Label shown while onboarding completion is processing"
+  },
+  "onboardingStart": "Get started",
+  "@onboardingStart": {
+    "description": "Button label to finish onboarding"
+  },
+  "commonSave": "Save",
+  "@commonSave": {
+    "description": "Generic save button label"
+  },
+  "commonShare": "Share",
+  "@commonShare": {
+    "description": "Generic share action label"
+  },
+  "commonDelete": "Delete",
+  "@commonDelete": {
+    "description": "Generic delete action label"
+  },
+  "commonEdit": "Edit",
+  "@commonEdit": {
+    "description": "Generic edit action label"
+  },
+  "commonErrorOccurred": "An error occurred",
+  "@commonErrorOccurred": {
+    "description": "Generic error title"
+  },
+  "commonErrorWithMessage": "Error: {message}",
+  "@commonErrorWithMessage": {
+    "description": "Error label with message placeholder",
+    "placeholders": {
+      "message": {
+        "type": "String"
+      }
+    }
+  },
+  "commonPreparing": "Preparing...",
+  "@commonPreparing": {
+    "description": "Generic preparing/loading label"
+  },
+  "commonShareFailedWithReason": "Sharing failed: {reason}",
+  "@commonShareFailedWithReason": {
+    "description": "Message shown when sharing fails",
+    "placeholders": {
+      "reason": {
+        "type": "String"
+      }
+    }
+  },
+  "commonUnexpectedErrorWithDetails": "An unexpected error occurred: {details}",
+  "@commonUnexpectedErrorWithDetails": {
+    "description": "Message shown when an unexpected error occurs",
+    "placeholders": {
+      "details": {
+        "type": "String"
+      }
+    }
+  },
+  "commonTitleLabel": "Title",
+  "@commonTitleLabel": {
+    "description": "Label for title fields"
+  },
+  "commonBodyLabel": "Body",
+  "@commonBodyLabel": {
+    "description": "Label for body/content fields"
+  },
+  "commonTagsLabel": "Tags: ",
+  "@commonTagsLabel": {
+    "description": "Label prefix for tag lists"
+  },
+  "commonClearFilters": "Clear filters",
+  "@commonClearFilters": {
+    "description": "Button label to remove all active filters"
+  },
+  "commonCreatedAtLabel": "Created",
+  "@commonCreatedAtLabel": {
+    "description": "Label for created timestamp"
+  },
+  "commonUpdatedAtLabel": "Updated",
+  "@commonUpdatedAtLabel": {
+    "description": "Label for updated timestamp"
+  },
+  "diaryDetailViewTitle": "Diary details",
+  "@diaryDetailViewTitle": {
+    "description": "App bar title when viewing a diary"
+  },
+  "diaryDetailEditTitle": "Edit diary",
+  "@diaryDetailEditTitle": {
+    "description": "App bar title when editing a diary"
+  },
+  "diaryDetailContentHeading": "Diary content",
+  "@diaryDetailContentHeading": {
+    "description": "Heading for the diary content section"
+  },
+  "diaryDetailLoadingTitle": "Loading diary...",
+  "@diaryDetailLoadingTitle": {
+    "description": "Title shown while the diary is loading"
+  },
+  "diaryDetailLoadingSubtitle": "Fetching diary text and photos",
+  "@diaryDetailLoadingSubtitle": {
+    "description": "Subtitle shown while the diary is loading"
+  },
+  "diaryDetailDateLabel": "Diary date",
+  "@diaryDetailDateLabel": {
+    "description": "Label for the diary date"
+  },
+  "diaryDetailPhotosSectionTitle": "Photos ({count})",
+  "@diaryDetailPhotosSectionTitle": {
+    "description": "Heading for the photos section with count",
+    "placeholders": {
+      "count": {
+        "type": "int"
+      }
+    }
+  },
+  "diaryDetailTagCount": "{count} tags",
+  "@diaryDetailTagCount": {
+    "description": "Number of tags associated with the diary",
+    "placeholders": {
+      "count": {
+        "type": "int"
+      }
+    }
+  },
+  "diaryDetailTitleHint": "Enter diary title",
+  "@diaryDetailTitleHint": {
+    "description": "Hint text for the diary title field"
+  },
+  "diaryDetailContentHint": "Please enter the diary content",
+  "@diaryDetailContentHint": {
+    "description": "Hint text for the diary content field"
+  },
+  "diaryDetailMetadataTitle": "Details",
+  "@diaryDetailMetadataTitle": {
+    "description": "Heading for the metadata section"
+  },
+  "diaryDetailDeleteDialogTitle": "Delete diary",
+  "@diaryDetailDeleteDialogTitle": {
+    "description": "Title for the delete diary confirmation dialog"
+  },
+  "diaryDetailDeleteDialogMessage": "Are you sure you want to delete this diary? This action cannot be undone.",
+  "@diaryDetailDeleteDialogMessage": {
+    "description": "Message explaining the consequences of deleting a diary"
+  },
+  "diaryDetailUpdateError": "Failed to update diary: {details}",
+  "@diaryDetailUpdateError": {
+    "description": "Error shown when updating a diary fails",
+    "placeholders": {
+      "details": {
+        "type": "String"
+      }
+    }
+  },
+  "diaryDetailDeleteError": "Failed to delete diary: {details}",
+  "@diaryDetailDeleteError": {
+    "description": "Error shown when deleting a diary fails",
+    "placeholders": {
+      "details": {
+        "type": "String"
+      }
+    }
+  },
+  "diaryDetailShareDialogMessage": "How would you like to share?",
+  "@diaryDetailShareDialogMessage": {
+    "description": "Prompt shown above sharing options"
+  },
+  "diaryDetailShareTextOptionTitle": "Photo & diary text",
+  "@diaryDetailShareTextOptionTitle": {
+    "description": "Share option title for text-based sharing"
+  },
+  "diaryDetailShareTextOptionSubtitle": "Best for X (formerly Twitter)",
+  "@diaryDetailShareTextOptionSubtitle": {
+    "description": "Share option subtitle describing X platform"
+  },
+  "diaryDetailShareImageOptionTitle": "Photo & diary as image",
+  "@diaryDetailShareImageOptionTitle": {
+    "description": "Share option title for image export"
+  },
+  "diaryDetailSharePortraitSubtitle": "Ideal for Instagram (portrait)",
+  "@diaryDetailSharePortraitSubtitle": {
+    "description": "Subtitle describing portrait export"
+  },
+  "diaryDetailShareSquareSubtitle": "Ideal for Instagram (square)",
+  "@diaryDetailShareSquareSubtitle": {
+    "description": "Subtitle describing square export"
+  },
+  "diaryDetailSharePreparingTitle": "Preparing to share",
+  "@diaryDetailSharePreparingTitle": {
+    "description": "Dialog title shown while preparing share content"
+  },
+  "diaryDetailShareGeneratingBody": "Generating shareable images...",
+  "@diaryDetailShareGeneratingBody": {
+    "description": "Dialog body shown while generating images for sharing"
+  },
+  "statisticsLoadingTitle": "Loading statistics...",
+  "@statisticsLoadingTitle": {
+    "description": "Title shown while statistics data is loading"
+  },
+  "statisticsLoadingSubtitle": "Analyzing your diary activity",
+  "@statisticsLoadingSubtitle": {
+    "description": "Subtitle shown while statistics data is loading"
+  },
+  "statisticsTotalEntriesTitle": "Total entries",
+  "@statisticsTotalEntriesTitle": {
+    "description": "Label for the total diary entries stat"
+  },
+  "statisticsCurrentStreakTitle": "Current streak",
+  "@statisticsCurrentStreakTitle": {
+    "description": "Label for the current streak stat"
+  },
+  "statisticsLongestStreakTitle": "Longest streak",
+  "@statisticsLongestStreakTitle": {
+    "description": "Label for the longest streak stat"
+  },
+  "statisticsMonthlyCountTitle": "This month",
+  "@statisticsMonthlyCountTitle": {
+    "description": "Label for the monthly diary count stat"
+  },
+  "statisticsUnitDiary": "diaries",
+  "@statisticsUnitDiary": {
+    "description": "Unit label for diary counts"
+  },
+  "statisticsUnitDay": "days",
+  "@statisticsUnitDay": {
+    "description": "Unit label for day counts"
+  },
+  "statisticsDiaryCountMessage": "There are {count} diaries.",
+  "@statisticsDiaryCountMessage": {
+    "description": "Message indicating how many diaries exist on a given day",
+    "placeholders": {
+      "count": {
+        "type": "int"
+      }
+    }
   }
 }
